force-app/main/default/objects/ContactSyncLog__c/ContactSyncLog__c.object-meta.xml
<CustomObject>
    <label>Contact Sync Log</label>
    <pluralLabel>Contact Sync Logs</pluralLabel>
    <nameField>
        <label>Log Number</label>
        <displayFormat>LOG-{0000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>