force-app/main/default/objects/ContactSyncLog__c/fields/ContactCount__c.field-meta.xml
<CustomField>
    <fullName>ContactCount__c</fullName>
    <label>Contact Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>